--- a/index.html
+++ b/index.html
@@ -115,59 +115,106 @@
 
     <section class="My__abilities">
       <h3>Mis habilidades</h3>
-      <div class="all__tables">
-        <div class="table__abilities">
-          <div class="table_title">
-            <div><img src="./assets/Icons/idea.png" alt="" /></div>
-            <div><h4>UX/UI Design</h4></div>
+      <div class="container__table">
+        <div class="all__tables">
+          <div class="table__abilities">
+            <div class="table_title">
+              <div><img src="./assets/Icons/idea.png" alt="" /></div>
+              <div><h4>UX/UI Design</h4></div>
+            </div>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Consectetur nostrum labore nesciunt perspiciatis voluptatum
+              tempore aperiam sequi quo.
+            </p>
           </div>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Consectetur nostrum labore nesciunt perspiciatis voluptatum tempore
-            aperiam sequi quo, minus soluta blanditiis veritatis debitis quos.
-            Similique quisquam quam totam nobis at?
-          </p>
+
+          <div class="table__abilities">
+            <div class="table_title">
+              <div><img src="./assets/Icons/rule.png" alt="" /></div>
+              <div><h4>Product Designer</h4></div>
+            </div>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Consectetur nostrum labore nesciunt perspiciatis voluptatum
+              tempore aperiam sequi quo.
+            </p>
+          </div>
         </div>
 
-        <div class="table__abilities">
-          <div class="table_title">
-            <div><img src="./assets/Icons/rule.png" alt="" /></div>
-            <div><h4>Product Designer</h4></div>
+        <div class="all__tables">
+          <div class="table__abilities">
+            <div class="table_title">
+              <div><img src="./assets/Icons/smartphone.png" alt="" /></div>
+              <div><h4>Interactive Design</h4></div>
+            </div>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Consectetur nostrum labore nesciunt perspiciatis voluptatum
+              tempore aperiam sequi quo.
+            </p>
           </div>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Consectetur nostrum labore nesciunt perspiciatis voluptatum tempore
-            aperiam sequi quo, minus soluta blanditiis veritatis debitis quos.
-            Similique quisquam quam totam nobis at?
-          </p>
+
+          <div class="table__abilities">
+            <div class="table_title">
+              <div><img src="./assets/Icons/smartphone.png" alt="" /></div>
+              <div><h4>Web Desing</h4></div>
+            </div>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Consectetur nostrum labore nesciunt perspiciatis voluptatum
+              tempore aperiam sequi quo.
+            </p>
+          </div>
         </div>
       </div>
+    </section>
 
-      <div class="all__tables">
-        <div class="table__abilities">
-          <div class="table_title">
-            <div><img src="./assets/Icons/smartphone.png" alt="" /></div>
-            <div><h4>Interactive Design</h4></div>
+    <!-- Experience -->
+
+    <section class="experience">
+      <h3>Experiencia</h3>
+      <div class="item__exp">
+        <div class="container__exp">
+          <div>
+            <img src="./assets/Icons/amazon.svg" alt="" />
           </div>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Consectetur nostrum labore nesciunt perspiciatis voluptatum tempore
-            aperiam sequi quo, minus soluta blanditiis veritatis debitis quos.
-            Similique quisquam quam totam nobis at?
-          </p>
+          <div>
+            <h5>Amazon</h5>
+            <p>UI Designer</p>
+            <p>2015 - 2017</p>
+          </div>
+          <div>
+            <h6>2 años</h6>
+          </div>
         </div>
 
-        <div class="table__abilities">
-          <div class="table_title">
-            <div><img src="./assets/Icons/smartphone.png" alt="" /></div>
-            <div><h4>Web Desing</h4></div>
+        <div class="container__exp">
+          <div>
+            <img src="./assets/Icons/airbnb.svg" alt="" />
           </div>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Consectetur nostrum labore nesciunt perspiciatis voluptatum tempore
-            aperiam sequi quo, minus soluta blanditiis veritatis debitis quos.
-            Similique quisquam quam totam nobis at?
-          </p>
+          <div>
+            <h5>Airbnb</h5>
+            <p>Senior UX/UI</p>
+            <p>2017 - 2018</p>
+          </div>
+          <div>
+            <h6>1 años</h6>
+          </div>
+        </div>
+
+        <div class="container__exp">
+          <div>
+            <img src="./assets/Icons/google.svg" alt="" />
+          </div>
+          <div>
+            <h5>Google</h5>
+            <p>Product</p>
+            <p>Designer</p>
+          </div>
+          <div>
+            <h6>2 años</h6>
+          </div>
         </div>
       </div>
     </section>
