--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@
       </div>
     </section>
 
+    <!-- Portafolio -->
+
     <script src="./assets/js/scripts.js"></script>
   </body>
 </html>
