--- a/index.html
+++ b/index.html
@@ -221,6 +221,44 @@
 
     <!-- Portafolio -->
 
+    <section class="portafolio">
+      <h3>Portafolio</h3>
+      <div class="port__content">
+        <div class="port__img">
+          <div><img src="./assets/img/ejemplo 2.png" alt="" /></div>
+          <div><img src="./assets/img/ejemplo 3.png" alt="" /></div>
+          <div><img src="./assets/img/ejemplo 4.png" alt="" /></div>
+          <div><img src="./assets/img/ejemplo 1.png" alt="" /></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact -->
+
+    <section class="contact">
+      <h3>Contacto</h3>
+      <div class="content__contact">
+        <div class="contact__item">
+          <div class="contact__img">
+            <img src="./assets/Icons/phone.svg" alt="" />
+          </div>
+          <h5>Numero celular</h5>
+          <p>5526895424</p>
+        </div>
+
+        <div class="contact__item">
+          <div class="contact__img">
+            <img src="./assets/Icons/mail.svg" alt="" />
+          </div>
+          <h5>Email</h5>
+          <p>example@correo.com</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- footer -->
+    <footer>Hecho con ♥ en Academlo</footer>
+
     <script src="./assets/js/scripts.js"></script>
   </body>
 </html>
