--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a class="nav__link--mobile" href="#">Home</a>
           </li>
           <li class="nav__menu--link">
-            <a class="nav__link--mobile" href="#">Acerca de mi</a>
+            <a class="nav__link--mobile" href="#">Acerca de mí</a>
           </li>
           <li class="nav__menu--link">
             <a class="nav__link--mobile" href="#">Mis habilidades</a>
@@ -48,7 +48,7 @@
       </div>
       <div class="nav__bar--desktop">
         <a href="#">Home</a>
-        <a href="#">Acerca de mi</a>
+        <a href="#">Acerca de mí</a>
         <a href="#">Mis habilidades</a>
         <a href="#">Experiencia</a>
         <a href="#">Portafolio</a>
@@ -88,7 +88,7 @@
             <button>
               <a href="#">
                 <i class="fa-solid fa-envelope"></i>
-                <p>Contactame</p>
+                <p>Contáctame</p>
               </a>
             </button>
           </div>
@@ -99,7 +99,7 @@
     <!-- About me -->
 
     <section class="about__me">
-      <h3>Acerca de mi</h3>
+      <h3>Acerca de mí</h3>
       <br />
       <div>
         <p>
