--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!-- Nav -->
 
-    <nav class="nav__bar">
+    <!-- <nav class="nav__bar">
       <div class="nav__bar--mobile">
         <button class="nav__toggle">
           <i class="fa-solid fa-bars"></i>
@@ -54,7 +54,7 @@
         <a href="#">Portafolio</a>
         <a href="#">Contacto</a>
       </div>
-    </nav>
+    </nav> -->
 
     <!-- Main -->
 
@@ -221,7 +221,7 @@
 
     <!-- Portafolio -->
 
-    <section class="portafolio">
+    <!-- <section class="portafolio">
       <h3>Portafolio</h3>
       <div class="port__content">
         <div class="port__img">
@@ -231,7 +231,7 @@
           <div><img src="./assets/img/ejemplo 1.png" alt="" /></div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Contact -->
 
