--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
     <!-- Portafolio -->
 
-    <!-- <section class="portafolio">
+    <section class="portafolio">
       <h3>Portafolio</h3>
       <div class="port__content">
         <div class="port__img">
@@ -231,7 +231,7 @@
           <div><img src="./assets/img/ejemplo 1.png" alt="" /></div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- Contact -->
 
