--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!-- Nav -->
 
-    <nav class="nav__bar">
+    <!-- <nav class="nav__bar">
       <div class="nav__bar--mobile">
         <button class="nav__toggle">
           <i class="fa-solid fa-bars"></i>
@@ -54,7 +54,7 @@
         <a href="#">Portafolio</a>
         <a href="#">Contacto</a>
       </div>
-    </nav>
+    </nav> -->
 
     <!-- Main -->
 
