--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       </div>
       <div class="nav__bar--desktop">
         <a href="#">Home</a>
-        <a href="#">Acerca de mí</a>
-        <a href="#">Mis habilidades</a>
-        <a href="#">Experiencia</a>
-        <a href="#">Portafolio</a>
-        <a href="#">Contacto</a>
+        <a href="#about">Acerca de mí</a>
+        <a href="#abilities">Mis habilidades</a>
+        <a href="#expe">Experiencia</a>
+        <a href="#port">Portafolio</a>
+        <a href="#cont">Contacto</a>
       </div>
     </nav>
 
@@ -98,7 +98,7 @@
 
     <!-- About me -->
 
-    <section class="about__me">
+    <section class="about__me" id="about">
       <h3>Acerca de mí</h3>
       <br />
       <div>
@@ -113,7 +113,7 @@
 
     <!-- My abilities -->
 
-    <section class="My__abilities">
+    <section class="My__abilities" id="abilities">
       <h3>Mis habilidades</h3>
       <div class="container__table">
         <div class="all__tables">
@@ -172,7 +172,7 @@
 
     <!-- Experience -->
 
-    <section class="experience">
+    <section class="experience" id="expe">
       <h3>Experiencia</h3>
       <div class="item__exp">
         <div class="container__exp">
@@ -221,7 +221,7 @@
 
     <!-- Portafolio -->
 
-    <section class="portafolio">
+    <section class="portafolio" id="port">
       <h3>Portafolio</h3>
       <div class="port__content">
         <div class="port__img">
@@ -235,7 +235,7 @@
 
     <!-- Contact -->
 
-    <section class="contact">
+    <section class="contact" id="cont">
       <h3>Contacto</h3>
       <div class="content__contact">
         <div class="contact__item">
